--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -227,7 +227,7 @@ h3 {
 	padding: 10px;
 	box-sizing: border-box;
 	background-color: white;
-    box-shadow: var(--card-shadow);
+	box-shadow: var(--card-shadow);
 }
 
 .cart {
@@ -309,7 +309,7 @@ h3 {
 }
 
 .confirm-btn {
-	background-color: #007bff;
+	background-color: #23913c;
 	color: white;
 	border: none;
 	padding: 10px 20px;
@@ -449,8 +449,8 @@ h3 {
 }
 
 .list-unpaid {
-    max-width: 1024px;
-    margin: 0 auto;
+	max-width: 1024px;
+	margin: 0 auto;
 }
 
 .title_unpaid {
@@ -494,7 +494,7 @@ h3 {
 .order-card-unpaid .order-header {
 	background-color: var(--header-bg);
 	color: white;
-	padding: 15px 20px;
+	padding: 12px 20px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -523,7 +523,7 @@ h3 {
 }
 
 .order-card-unpaid .table th, .order-card-unpaid .table td {
-	padding: 12px 20px;
+	padding: 10px 20px;
 	border-bottom: 1px solid var(--border-color);
 }
 
@@ -597,4 +597,66 @@ h3 {
 	font-size: 24px;
 	font-weight: bold;
 	color: var(--secondary-color);
+}
+
+.proflie-page .header-title {
+	background: linear-gradient(135deg, #218838, #28a745);
+	color: #fff;
+	font-size: 24px;
+	padding: 12px;
+	border-radius: 5px;
+	margin-bottom: 20px;
+}
+
+.proflie-page .avatar-container {
+	position: relative;
+	width: 170px;
+	height: 170px;
+	margin: 0 auto;
+}
+
+.proflie-page .avatar-wrapper {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	overflow: hidden;
+	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+.proflie-page .avatar-wrapper img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 50%;
+	border: 4px solid #fff;
+	transition: all 0.3s ease;
+}
+
+.proflie-page .avatar-edit {
+	position: absolute;
+	right: 25px;
+	bottom: 5px;
+}
+
+.proflie-page .avatar-edit label {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 36px;
+	height: 36px;
+	cursor: pointer;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.proflie-page .user-info-summary {
+	background-color: #f8f9fa;
+	padding: 15px;
+	border-radius: 10px;
+	margin-top: 10px;
+	text-align: left;
+}
+
+.proflie-page .toggle-password {
+	cursor: pointer;
 }
