--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -343,15 +343,28 @@ h3 {
 	margin-bottom: 8px;
 }
 
-.disabled-product {
-	opacity: 0.5;
-	pointer-events: none;
+.status-disabled, .time-disabled {
+    opacity: 0.7;
+    pointer-events: none;
+    background-color: #f8f9fa;
+}
+
+.status-disabled.time-disabled {
+    opacity: 0.3;
+    border: 1px solid #dc3545;
+}
+
+.font-small {
+    font-size: 12px;
+    text-align: left;
+    max-width: 300px;
 }
 
 .product-name {
 	flex: 2;
 	font-weight: bold;
 	text-align: left;
+	margin-bottom: 0;
 }
 
 .product-quality {
