--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -28,7 +28,7 @@ body a {
 }
 
 .content.container {
-	max-width: 1280px;
+	max-width: 1336px;
 	margin: 0 auto;
 }
 
@@ -220,7 +220,8 @@ h3 {
 	justify-content: space-between;
 }
 
-.product-list, .cart {
+.product-list,
+.cart {
 	width: 44%;
 	border: 1px solid #ddd;
 	border-radius: 5px;
@@ -234,7 +235,8 @@ h3 {
 	width: 55%;
 }
 
-.product-list h2, .cart h2 {
+.product-list h2,
+.cart h2 {
 	margin-top: 0;
 	color: #333;
 }
@@ -274,7 +276,9 @@ h3 {
 	color: #e83e8c;
 }
 
-.product-list .title, .cart .title, .ordered-products .title {
+.product-list .title,
+.cart .title,
+.ordered-products .title {
 	font-weight: bold;
 	font-size: 24px;
 	background: linear-gradient(135deg, #218838, #28a745);
@@ -283,10 +287,11 @@ h3 {
 	margin-bottom: 20px;
 }
 
-.btn-add, .btn-minus {
+.btn-add,
+.btn-minus {
 	color: #fff;
 	font-size: 20px;
-	background: #b0acac;
+	background: #5c5656;
 	border-radius: 50%;
 	width: 30px;
 	height: 30px;
@@ -343,21 +348,22 @@ h3 {
 	margin-bottom: 8px;
 }
 
-.status-disabled, .time-disabled {
-    opacity: 0.7;
-    pointer-events: none;
-    background-color: #f8f9fa;
+.status-disabled,
+.time-disabled {
+	opacity: 0.4;
+	pointer-events: none;
+	background-color: #f8f9fa;
 }
 
 .status-disabled.time-disabled {
-    opacity: 0.3;
-    border: 1px solid #dc3545;
+	opacity: 0.3;
+	border: 1px solid #dc3545;
 }
 
 .font-small {
-    font-size: 12px;
-    text-align: left;
-    max-width: 300px;
+	font-size: 12px;
+	text-align: left;
+	max-width: 300px;
 }
 
 .product-name {
@@ -428,6 +434,7 @@ h3 {
 	padding: 10px;
 	border-bottom: 1px solid #eaedf3;
 	vertical-align: middle;
+	text-align: left;
 }
 
 .order-table tr:last-child td {
@@ -535,7 +542,8 @@ h3 {
 	background-color: var(--light-bg);
 }
 
-.order-card-unpaid .table th, .order-card-unpaid .table td {
+.order-card-unpaid .table th,
+.order-card-unpaid .table td {
 	padding: 10px 20px;
 	border-bottom: 1px solid var(--border-color);
 }
@@ -672,4 +680,13 @@ h3 {
 
 .proflie-page .toggle-password {
 	cursor: pointer;
+}
+
+td.order-subtotal-label {
+	text-align: left;
+}
+
+.proflie-page {
+	max-width: 1111px;
+	margin: 0 auto;
 }
